# setup-pi

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.devuan  README.md  inspect  pyproject.toml  setup-devuan  setup-devuan-docker  setup-raspios  setup-raspios-docker
setup_pi/: Dockerfile  raspios.py
