[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "setup-pi"
version = "0.1.1"
description = "Customise Raspberry Pi OS images for SD card flashing"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

[project.scripts]
setup-raspios = "setup_pi.raspios:main"

[tool.hatch.build.targets.wheel]
packages = [ "setup_pi",]
